--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html {
   box-sizing: border-box;
   background-color: #eeeeee;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 *,
